[package]
name = "fuse"
edition = "2018"
version = "0.4.0-dev"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/fuse-rs"
repository = "https://github.com/zargony/fuse-rs"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys"]

[badges]
cirrus-ci = { repository = "zargony/fuse-rs" }
github = { repository = "zargony/fuse-rs" }

[dependencies]
fuse-abi = { path = "./fuse-abi", version = "=0.4.0-dev" }
fuse-sys = { path = "./fuse-sys", version = "=0.4.0-dev" }
libc = "0.2.51"
log = "0.4.6"
thread-scoped = "1.0.2"

[dev-dependencies]
env_logger = "0.6.0"
