[package]
name = "fuse"
edition = "2018"
version = "0.4.0"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/fuse-rs"
repository = "https://github.com/zargony/fuse-rs"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys"]

[badges]
cirrus-ci = { repository = "zargony/fuse-rs" }
github = { repository = "zargony/fuse-rs" }

[dependencies]
fuse-abi = { path = "./fuse-abi", version = "=0.4.0" }
fuse-sys = { path = "./fuse-sys", version = "=0.4.0" }
libc = "0.2.72"
log = "0.4.11"
thread-scoped = "1.0.2"

[dev-dependencies]
env_logger = "0.7.1"
